<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <!--
    <RelativeLayout
        android:id="@+id/titlelayoutholder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_gradient_background" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="3dp"
            android:scrollHorizontally="true"
            android:text="@string/schoolname"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
    </RelativeLayout>
    -->

    <RelativeLayout
        android:id="@+id/titlelayoutholder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_gradient_background" >

        <Button
            android:id="@+id/hiddenloginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="0dp"
            android:background="@drawable/login_red_gradient_background"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone" />

                <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="3dp"
            android:scrollHorizontally="true"
            android:text="@string/schoolname"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bodyholder"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/titlelayoutholder"
        android:background="@drawable/background"
        android:padding="40dp" >

        <TextView
            android:id="@+id/recordbroadcasttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titlelayoutholder"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/broadcastrecordvoicetitle"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/recordbroadcasttimelimittitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recordbroadcasttitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/maxsixtyseconds"
            android:textColor="@color/black" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recordbroadcasttimelimittitle"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="50dp" />

        <Button
            android:id="@+id/recordbutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chronometer"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/blue_gradient_background"
            android:text="@string/record"
            android:textColor="@color/white"
            android:visibility="visible" />

        <Button
            android:id="@+id/stopbutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chronometer"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/blue_gradient_background"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/rewindbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/recordbutton"
            android:layout_margin="0dp"
            android:background="@drawable/login_blue_gradient_background"
            android:contentDescription="@string/rewindDescription"
            android:src="@drawable/rewind2"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/playbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recordbutton"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:background="@drawable/login_blue_gradient_background"
            android:contentDescription="@string/playDescription"
            android:src="@drawable/play2"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/stopimagebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recordbutton"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:background="@drawable/login_blue_gradient_background"
            android:contentDescription="@string/stopDescription"
            android:src="@drawable/stop2"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/pausebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/recordbutton"
            android:layout_margin="0dp"
            android:background="@drawable/login_blue_gradient_background"
            android:contentDescription="@string/pauseDescription"
            android:src="@drawable/pause2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/broadcastbutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playbutton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_gradient_background"
            android:text="@string/broadcastrobocall"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>